# bioconda2biocontainer

./: .gitignore  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: python-app.yml  python-package.yml  python-publish.yml
requirements/: base.txt  test.txt
src/bioconda2biocontainer/: __init__.py  biocontainer.py  entry_point.py  entry_point_search.py  entry_point_update_cwl_docker.py  update_cwl_docker_image.py
tests/: test_bioconda2biocontainer.py
